TestCases/Errors/Haversine/layers/ssh_sum.spm
@layer ssh_sum
type numeric_meta
default_layer ssh_08_sum
years	2002	2003	2004	2005	2006	2007	2008	2009	2010	2011	2012
layers	ssh_02_sum	ssh_03_sum	ssh_04_sum	ssh_05_sum	ssh_06_sum	ssh_07_sum	ssh_08_sum	ssh_09_sum	ssh_10_sum	ssh_11_sum 	ssh_12_sum
